test/asm/export.err
error: syntax error, unexpected EQUS
    at export.asm(18)
Assembly aborted with 1 error!
